--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "5.0.1",
     "sass": "^1.52.2",
     "typescript": "^4.7.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
